--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           <h3 id="artist">Annabel</h3>
           <div class="progressbar" id="progressbar">
             <div class="progressbar_meter">
-              <div id="current_time">0:00</div>
-              <div id="duration">5:04</div>
+              <p id="current_time">0:00</p>
+              <p id="duration">5:04</p>
             </div>
 
             <div
@@ -47,8 +47,28 @@
           </div>
         </div>
 
-        <div class="playlist">
-          <p>heloooooo</p>
+        <div class="playlist-container">
+          <div class="playlist">
+            <div class="music">
+              <img src="asset/images/2.jpg" alt="" class="playlist_img" />
+              <div class="music_info">
+                <p id="playlist_title">Daisy</p>
+                <p id="playlist_artist">Stereo Dive</p>
+              </div>
+            </div>
+            <p id="playlist_duration">3:04</p>
+          </div>
+
+          <div class="playlist">
+            <div class="music">
+              <img src="asset/images/2.jpg" alt="" class="playlist_img" />
+              <div class="music_info">
+                <p id="playlist_title">Daisy</p>
+                <p id="playlist_artist">Stereo Dive</p>
+              </div>
+            </div>
+            <p id="playlist_duration">3:04</p>
+          </div>
         </div>
       </div>
     </div>
