play song onclick playlist

--- a/index.html
+++ b/index.html
@@ -47,29 +47,7 @@
           </div>
         </div>
 
-        <div class="playlist-container">
-          <div class="playlist">
-            <div class="music">
-              <img src="asset/images/2.jpg" alt="" class="playlist_img" />
-              <div class="music_info">
-                <p id="playlist_title">Daisy</p>
-                <p id="playlist_artist">Stereo Dive</p>
-              </div>
-            </div>
-            <p id="playlist_duration">3:04</p>
-          </div>
-
-          <div class="playlist">
-            <div class="music">
-              <img src="asset/images/2.jpg" alt="" class="playlist_img" />
-              <div class="music_info">
-                <p id="playlist_title">Daisy</p>
-                <p id="playlist_artist">Stereo Dive</p>
-              </div>
-            </div>
-            <p id="playlist_duration">3:04</p>
-          </div>
-        </div>
+        <ul class="playlist-container" id="playlist"></ul>
       </div>
     </div>
     <script src="script.js"></script>
